# sharedlibpp

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  MyMath.cpp  MyMath.h  MyMathCustom.cpp  MyMathCustom.h  math_test.cpp  math_test_custom.cpp
include/: SharedLibrary.h  SharedLibraryClass.h  SharedLibraryClassApi.h  SharedLibraryClassFactory-inl.h  SharedLibraryClassFactory.h  SharedLibraryFactory.h  Vocab.h  config.h
src/: CMakeLists.txt  SharedLibrary.cpp  SharedLibraryFactory.cpp
src/shlibpp/: SharedLibraryClassApi.h  SharedLibraryFactory.h
